# ml_service_homework

./: .coverage  .dockerignore  .editorconfig  .env.example  .gitignore  README.md  docker-compose.yml  pytest.ini  tox.ini
app/: Dockerfile  config.py  main.py  pyproject.toml
app/auth/: authenticate.py  hash_password.py  jwt_handler.py
app/bot/: main.py
app/bot/handlers/: __init__.py
app/crud/: admin.py  billing.py  ml.py  user.py
app/database/: __init__.py  database.py  seed.py
app/ml/: __init__.py  engine.py  model.pkl
app/models/: __init__.py  base_model.py  ml_model.py  ml_request_model.py  transaction_model.py  user_model.py
app/routes/: admin_router.py  dependencies.py  home_router.py  ml_router.py  transaction_router.py  user_router.py
app/schemas/: __init__.py  base_schema.py  ml_model_schemas.py  ml_request_schemas.py  ml_task_schemas.py  transaction_schemas.py  user_schemas.py
app/services/: __init__.py  admin_service.py  billing_service.py  ml_request_service.py  ml_service.py  ml_service_helpers.py  mltask_client.py  mq_consumer.py  mq_publisher.py  results_consumer.py  user_service.py
app/utils/: __init__.py  auth.py  decorators.py  exceptions.py  handlers.py  logger.py
ml_worker/: Dockerfile  config.py  engine.py  main.py  pyproject.toml
ml_worker/schemas/: results.py  tasks.py
ml_worker/services/: api_client.py  engine.py  ml_worker.py  mltask_consumer.py  mq_consumer.py  mq_publisher.py  results_client.py  rpc_worker.py  task_worker.py
webview/: main.py  pyproject.toml
webview/.streamlit/: config.toml
webview/components/: auth.py  layout.py
webview/core/: config.py  styles.py  utils.py
webview/data/: sample.csv  sample.json  sample.xlsx
webview/pages/: admin.py  api_docs.py  balance.py  feedback.py  history.py  home.py  ml_requests.py  overview.py  settings.py
webview/pages/cabinet/: balance.py  dashboard.py  history.py  ml_requests.py
webview/services/: api_client.py  logger.py  state.py
(+31 files in other folders)
