[project]
name = "ml-service-homework"
version = "0.1.0"
description = "Homework for Lesson 3"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "sqlalchemy==2.0.45",
    "pydantic-settings==2.12.0",
    "pydantic[email]==2.12.5",
    "python-dotenv==1.2.1",
    "psycopg[binary]==3.2.4",
    "email-validator",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.2",
    "pandas>=2.2.0",
    "aiogram>=3.4.1",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "tenacity>=8.2.3",
]

[tool.setuptools]
packages = []
