[project]
name = "ml-worker"
version = "0.1.0"
description = "Worker for processing ML tasks via RabbitMQ"
dependencies = [
    "aio-pika>=9.0.0",
    "httpx>=0.25.0",
    "pydantic-settings>=2.0.0",
    "joblib>=1.3.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
